--- a/form-builder-frontend/package.json
+++ b/form-builder-frontend/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "primeicons": "^7.0.0",
+    "primevue": "^3.52.0",
     "vue": "^3.4.21"
   },
   "devDependencies": {
